--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@inject NavigationManager Nav
+<nav>
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">RecipesWeb</a>
         <button title="Navigation menu" @onclick="ToggleNavMenu">
@@ -26,6 +28,7 @@
         </div>
     </nav>
 </div>
+</nav>
 
 @code {
     private bool collapseNavMenu = false;
