--- a/Client/wwwroot/css/tailwindcss.css
+++ b/Client/wwwroot/css/tailwindcss.css
@@ -488,14 +488,14 @@ video {
 .collapse {
   visibility: collapse;
 }
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
 .me-2 {
   margin-inline-end: 0.5rem;
 }
 .mt-4 {
   margin-top: 1rem;
-}
-.table {
-  display: table;
 }
 .px-3 {
   padding-left: 0.75rem;
