--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -1,5 +1,7 @@
-﻿@inject NavigationManager Nav
-<nav>
+﻿@inject IJSRuntime JSRuntime
+@inject AuthenticationStateProvider AuthStateProvider
+@inject NavigationManager Nav
+
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">RecipesWeb</a>
@@ -16,19 +18,25 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
+        <AuthorizeView>
+            <NotAuthorized>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="login">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Login
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="register">
+                        <span class="oi oi-plus" aria-hidden="true"></span> Sign up
+                    </NavLink>
+                </div>
+            </NotAuthorized>
+            <Authorized>
+                <div class="btn btn-danger" @onclick="Logout">Logout</div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
-</nav>
 
 @code {
     private bool collapseNavMenu = false;
@@ -38,5 +46,12 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+
+    public async void Logout()
+    {
+        await JSRuntime.InvokeVoidAsync("localStorage.clear", null);
+        await AuthStateProvider.GetAuthenticationStateAsync();
+        Nav.NavigateTo("/");
     }
 }
