Initial Form of NavBar

--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">RecipesWeb</a>
+        <a class="no-underline text-sm text-white" href="">(っ◔◡◔)っ𝕽𝖊𝖈𝖎𝖕𝖊𝖘𝖂𝖊𝖇</a>
         <button title="Navigation menu" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
