--- a/Client/wwwroot/css/tailwindcss.css
+++ b/Client/wwwroot/css/tailwindcss.css
@@ -488,6 +488,9 @@ video {
 .collapse {
   visibility: collapse;
 }
+.m-0 {
+  margin: 0px;
+}
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -496,6 +499,9 @@ video {
 }
 .mt-4 {
   margin-top: 1rem;
+}
+.p-0 {
+  padding: 0px;
 }
 .px-3 {
   padding-left: 0.75rem;
