--- a/Client/Pages/Login.razor
+++ b/Client/Pages/Login.razor
@@ -19,7 +19,7 @@
         <label for="Password1" class="form-label">Password</label>
         <ValidationMessage For="@(()=>user.Password)" />
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary btn-outline-primary">Submit</button>
 </EditForm>
 <p>Don't have an Account? <a class="btn btn-success" href="register">Register Here!</a></p>
 
