--- a/Client/Pages/Registration.razor
+++ b/Client/Pages/Registration.razor
@@ -33,7 +33,7 @@
         <label for="PasswordConfirm" class="form-label">Confirm Password</label>
         <ValidationMessage For="@(()=>user.PasswordConfirm)" />
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary btn-outline-primary">Submit</button>
 </EditForm>
 
 @code {
